[package]
name = "tinytime"
description = "Low overhead implementation of time-related concepts."
homepage = "https://github.com/moia-oss/tinytime.rs"
repository = "https://github.com/moia-oss/tinytime.rs"
documentation = "https://docs.rs/tinytime"
edition = "2024"
version = "0.14.4"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
keywords = ["time", "tiny", "low-overhead"]
categories = ["date-and-time"]

[features]
bincode = ["dep:bincode"]
chrono = ["dep:chrono"]
rand = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
bincode = { version = "2.0.1", features = ["derive"], default-features = false, optional = true }
chrono = { version = "0.4.42", features = ["alloc"], default-features = false, optional = true }
rand = { version = "0.9.2", features = ["thread_rng"], default-features = false, optional = true }
serde = { version = "1.0.228", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.147"
bincode = { version = "2.0.1", features = ["serde"] }

[lints.rust]
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow" # TODO
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
dead_code = "warn"
unused = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

cargo = { level = "deny", priority = -1 }
todo = "warn"

disallowed-types = "deny"
missing_const_for_fn = "warn"

allow_attributes = "deny"
allow_attributes_without_reason = "deny"

### Pedantic
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow" # TODO
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

### Restrictions
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
unimplemented = "warn"
exit = "warn"
unreachable = "warn"
indexing_slicing = "warn"
string_slice = "warn"
